docs/api/qiskit/0.33/index.md
---
title: qiskit
description: API reference for qiskit
in_page_toc_min_heading_level: 1
python_api_type: module
python_api_name: qiskit
---

<span id="module-qiskit" />

# Qiskit Terra API Reference

*   [Quantum Circuits (`qiskit.circuit`)](circuit)
*   [Compilation Routines (`qiskit.compiler`)](compiler)
*   [Executing Experiments (`qiskit.execute_function`)](execute)
*   [Visualizations (`qiskit.visualization`)](visualization)
*   [ClassicalFunction compiler (`qiskit.circuit.classicalfunction`)](classicalfunction)
*   [Circuit Converters (`qiskit.converters`)](converters)
*   [Circuit and Schedule Assembler (`qiskit.assembler`)](assembler)
*   [DAG Circuits (`qiskit.dagcircuit`)](dagcircuit)
*   [Quantum Circuit Extensions (`qiskit.extensions`)](extensions)
*   [BasicAer: Python-based Simulators (`qiskit.providers.basicaer`)](providers_basicaer)
*   [Providers Interface (`qiskit.providers`)](providers)
*   [Writing a New Provider](providers#writing-a-new-provider)
*   [Migrating between Backend API Versions](providers#migrating-between-backend-api-versions)
*   [Legacy Provider Interface Base Objects (`qiskit.providers`)](providers#legacy-provider-interface-base-objects-qiskit-providers)
*   [Backend Objects (`qiskit.providers.models`)](providers_models)
*   [Pulse (`qiskit.pulse`)](pulse)
*   [Circuit Scheduler (`qiskit.scheduler`)](scheduler)
*   [Circuit Synthesis (`qiskit.synthesis`)](synthesis)
*   [Qasm (`qiskit.qasm`)](qasm)
*   [Qobj (`qiskit.qobj`)](qobj)
*   [QPY serialization (`qiskit.circuit.qpy_serialization`)](qpy)
*   [Quantum Information (`qiskit.quantum_info`)](quantum_info)
*   [Experiment Results (`qiskit.result`)](result)
*   [Qiskit Tools (`qiskit.tools`)](tools)
*   [Jupyter Tools (`qiskit.tools.jupyter`)](tools_jupyter)
*   [Transpiler (`qiskit.transpiler`)](transpiler)
*   [Transpiler Passes (`qiskit.transpiler.passes`)](transpiler_passes)
*   [Preset Passmanagers (`qiskit.transpiler.preset_passmanagers`)](transpiler_preset)
*   [Synthesis Plugins (`qiskit.transpiler.passes.synthesis.plugin`)](transpiler_plugins)
*   [Built-in Transpiler Synthesis Plugins](transpiler_builtin_plugins)
*   [Utilities (`qiskit.utils`)](utils)
*   [Measurement Mitigation Utils (`qiskit.utils.mitigation`)](utils_mitigation)
*   [Operators (`qiskit.opflow`)](opflow)
*   [Algorithms (`qiskit.algorithms`)](algorithms)

